--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
         <section class="hero">
           <article class="description">
             <h2>Absolutely astonishing breaking news!</h2>
+            <!-- <img class="snippet__thumbnail" src="images/dog.jpg" alt="picture of a girl with a large, stuffed dog toy"> -->
             <p>Organic raw denim Vice keffiyeh lomo Kickstarter art lomo Kickstarter art four loko. Organic raw denim Vice keffiyeh lomo Kickstarter art lomo Kickstarter art four loko.</p>
           </article>
         </section>
