--- a/app/index.html
+++ b/app/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Brighton Times</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="./styles/main.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
 
@@ -33,7 +33,6 @@
         <section class="hero">
           <article class="description">
             <h2>Absolutely astonishing breaking news!</h2>
-            <!-- <img class="snippet__thumbnail" src="images/dog.jpg" alt="picture of a girl with a large, stuffed dog toy"> -->
             <p>Organic raw denim Vice keffiyeh lomo Kickstarter art lomo Kickstarter art four loko. Organic raw denim Vice keffiyeh lomo Kickstarter art lomo Kickstarter art four loko.</p>
           </article>
         </section>
@@ -102,7 +101,7 @@
                 <td>2</td>
                 <td>Foxes</td>
               </tr>
-
+              
             </tbody>
           </table>
         </section>
