--- a/app/index.html
+++ b/app/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Brighton Times</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="./styles/main.css">
   </head>
   <body>
 
     <header class="header">
       <div class="header__inner">
-        <img class="header__logo" src="images/city.png" alt="iconic view of a cityscape">
+        <img class="header__logo" src="../images/city.png" alt="iconic view of a cityscape">
         <h1 class="header__title">
           The Brighton Times
         </h1>
@@ -101,7 +101,7 @@
                 <td>2</td>
                 <td>Foxes</td>
               </tr>
-              
+
             </tbody>
           </table>
         </section>
