--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 
-    <header class="header">
+    <header class="header container">
       <div class="header__inner">
         <img class="header__logo" src="../images/city.png" alt="iconic view of a cityscape">
         <h1 class="header__title">
@@ -30,116 +30,121 @@
 
     <main>
       <section class="content">
-        <section class="hero">
-          <article class="description">
-            <h2>Absolutely astonishing breaking news!</h2>
-            <p>Organic raw denim Vice keffiyeh lomo Kickstarter art lomo Kickstarter art four loko. Organic raw denim Vice keffiyeh lomo Kickstarter art lomo Kickstarter art four loko.</p>
-          </article>
-        </section>
+        <div class="container news__div">
+          <section class="hero">
+            <article class="description">
+              <h2>Absolutely astonishing breaking news!</h2>
+              <p>Organic raw denim Vice keffiyeh lomo Kickstarter art lomo Kickstarter art four loko. Organic raw denim Vice keffiyeh lomo Kickstarter art lomo Kickstarter art four loko.</p>
+            </article>
+          </section>
 
-        <section class="news top-news">
-          <h2 class="news__title">Top news <a href="#" class="news__more">+ more</a></h2>
-          <ul>
-            <li class="top-news__item">
-              <a href="#">Gastropub distillery Marfa farm-to-table, Etsy Truffaut fingerstache.</a>
-            </li>
-            <li class="top-news__item">
-              <a href="#">Squid lomo Kickstarter art lomo Kickstarter art party cronut scenester.</a>
-            </li>
-            <li class="top-news__item">
-              <a href="#">Organic raw denim lomo Kickstarter art Vice keffiyeh four loko.</a>
-            </li>
-            <li class="top-news__item">
-              <a href="#">Organic raw denim Vice keffiyeh lomo Kickstarter art lomo Kickstarter art four loko.</a>
-            </li>
-          </ul>
-        </section>
+          <section class="news top-news">
+            <h2 class="news__title">Top news <a href="#" class="news__more">+ more</a></h2>
+            <ul>
+              <li class="top-news__item">
+                <a href="#">Gastropub distillery Marfa farm-to-table, Etsy Truffaut fingerstache.</a>
+              </li>
+              <li class="top-news__item">
+                <a href="#">Squid lomo Kickstarter art lomo Kickstarter art party cronut scenester.</a>
+              </li>
+              <li class="top-news__item">
+                <a href="#">Organic raw denim lomo Kickstarter art Vice keffiyeh four loko.</a>
+              </li>
+              <li class="top-news__item">
+                <a href="#">Organic raw denim Vice keffiyeh lomo Kickstarter art lomo Kickstarter art four loko.</a>
+              </li>
+            </ul>
+          </section>
+        </div>
 
-        <section class="scores">
-          <table class="scores__table">
-            <thead>
-              <tr>
-                <th>date</th>
-                <th>team</th>
-                <th colspan="2">score</th>
-                <th>team</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Friday</td>
-                <td>Bears</td>
-                <td>95</td>
-                <td class="winner">109</td>
-                <td class="winner">Cubs</td>
-              </tr>
-              <tr>
-                <td>Friday</td>
-                <td class="winner">Otters</td>
-                <td class="winner">3</td>
-                <td>1</td>
-                <td>Cubs</td>
-              </tr>
-              <tr>
-                <td>Saturday</td>
-                <td class="winner">Wolves</td>
-                <td class="winner">7</td>
-                <td>0</td>
-                <td>Panthers</td>
-              </tr>
-              <tr>
-                <td>Sunday</td>
-                <td>Hawks</td>
-                <td>11</td>
-                <td class="winner">12</td>
-                <td class="winner">Capons</td>
-              </tr>
-              <tr>
-                <td>Sunday</td>
-                <td class="winner">Stags</td>
-                <td class="winner">6</td>
-                <td>2</td>
-                <td>Foxes</td>
-              </tr>
+        <div class="container extra__div">
+            <section class="weather">
+                <span class="weather__location">Brighton, UK</span>
+                <span class="weather__desc">Sunny</span>
+                <span class="weather__today">
+                <img class="weather__today__image" src="images/weather.png" alt="icon of a partially sunny day"><span class="weather__today__temp">13</span><span class="weather__today__deg">&deg;C</span>
+                </span>
+                <ul class="weather__next">
+                  <li class="weather__next__item">
+                    <span>Mon</span>
+                    <img class="weather__next__image" src="images/sunny.png" alt="icon of a sunny day">
+                    <span>13 &deg;C</span>
+                  </li><li class="weather__next__item">
+                    <span>Tues</span>
+                    <img class="weather__next__image" src="images/cloudy.png" alt="icon of a cloudy day">
+                    <span>13 &deg;C</span>
+                  </li><li class="weather__next__item">
+                    <span>Wed</span>
+                    <img class="weather__next__image" src="images/cloudy.png" alt="icon of a cloudy day">
+                    <span>13 &deg;C</span>
+                  </li><li class="weather__next__item">
+                    <span>Thu</span>
+                    <img class="weather__next__image" src="images/rain.png" alt="icon of a rainy day">
+                    <span>13 &deg;C</span>
+                  </li><li class="weather__next__item">
+                    <span>Fri</span>
+                    <img class="weather__next__image" src="images/sunny.png" alt="icon of a sunny day">
+                    <span>13 &deg;C</span>
+                  </li>
+                </ul>
+              </section>
+          <section class="scores">
+            <table class="scores__table">
+              <thead>
+                <tr>
+                  <th>date</th>
+                  <th>team</th>
+                  <th colspan="2">score</th>
+                  <th>team</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Friday</td>
+                  <td>Bears</td>
+                  <td>95</td>
+                  <td class="winner">109</td>
+                  <td class="winner">Cubs</td>
+                </tr>
+                <tr>
+                  <td>Friday</td>
+                  <td class="winner">Otters</td>
+                  <td class="winner">3</td>
+                  <td>1</td>
+                  <td>Cubs</td>
+                </tr>
+                <tr>
+                  <td>Saturday</td>
+                  <td class="winner">Wolves</td>
+                  <td class="winner">7</td>
+                  <td>0</td>
+                  <td>Panthers</td>
+                </tr>
+                <tr>
+                  <td>Sunday</td>
+                  <td>Hawks</td>
+                  <td>11</td>
+                  <td class="winner">12</td>
+                  <td class="winner">Capons</td>
+                </tr>
+                <tr>
+                  <td>Sunday</td>
+                  <td class="winner">Stags</td>
+                  <td class="winner">6</td>
+                  <td>2</td>
+                  <td>Foxes</td>
+                </tr>
 
-            </tbody>
-          </table>
-        </section>
+              </tbody>
+            </table>
+          </section>
 
-        <section class="weather">
-          <span class="weather__location">Brighton, UK</span>
-          <span class="weather__desc">Sunny</span>
-          <span class="weather__today">
-          <img class="weather__today__image" src="images/weather.png" alt="icon of a partially sunny day"><span class="weather__today__temp">13</span><span class="weather__today__deg">&deg;C</span>
-          </span>
-          <ul class="weather__next">
-            <li class="weather__next__item">
-              <span>Mon</span>
-              <img class="weather__next__image" src="images/sunny.png" alt="icon of a sunny day">
-              <span>13 &deg;C</span>
-            </li><li class="weather__next__item">
-              <span>Tues</span>
-              <img class="weather__next__image" src="images/cloudy.png" alt="icon of a cloudy day">
-              <span>13 &deg;C</span>
-            </li><li class="weather__next__item">
-              <span>Wed</span>
-              <img class="weather__next__image" src="images/cloudy.png" alt="icon of a cloudy day">
-              <span>13 &deg;C</span>
-            </li><li class="weather__next__item">
-              <span>Thu</span>
-              <img class="weather__next__image" src="images/rain.png" alt="icon of a rainy day">
-              <span>13 &deg;C</span>
-            </li><li class="weather__next__item">
-              <span>Fri</span>
-              <img class="weather__next__image" src="images/sunny.png" alt="icon of a sunny day">
-              <span>13 &deg;C</span>
-            </li>
-          </ul>
-        </section>
+
+        </div>
 
         <section class="news recent-news">
           <h2 class="news__title">Latest news <a href="#" class="news__more">+ more</a></h2>
-          <ul>
+          <ul class="container">
             <li class="snippet">
               <img class="snippet__thumbnail" src="images/dog.jpg" alt="picture of a girl with a large, stuffed dog toy">
               <h3 class="snippet__title"><a href="#">Gastropub distillery Marfa farm-to-table</a></h3>
