--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,54 @@
         </div>
 
         <div class="container extra__div">
+            <table class="scores__table">
+              <tr><th colspan="13">Baseball</th></tr>
+              <tr>
+                <td aria-colspan="1">Team</td>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+                <td>7</td>
+                <td>8</td>
+                <td>9</td>
+                <td>R</td>
+                <td>H</td>
+                <td>E</td>
+              </tr>
+              <tr>
+                <td aria-colspan="1">ATL</td>
+                <td>1</td>
+                <td>0</td>
+                <td>5</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>3</td>
+                <td>1</td>
+                <td>10</td>
+                <td>11</td>
+                <td>1</td>
+              </tr>
+              <tr>
+                <td aria-colspan="1">PHI</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>1</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>1</td>
+                <td>5</td>
+                <td>1</td>
+              </tr>
+            </table>
             <section class="weather">
                 <span class="weather__location">Brighton, UK</span>
                 <span class="weather__desc">Sunny</span>
